[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/ProgressBar/under.png" type="Texture" id=1]
[ext_resource path="res://Assets/ProgressBar/progress.png" type="Texture" id=2]
[ext_resource path="res://Assets/buttons/exitBtn.png" type="Texture" id=3]
[ext_resource path="res://Level/UI_Scenes/Control.gd" type="Script" id=4]
[ext_resource path="res://Assets/Backgrounds/endGame.png" type="Texture" id=5]
[ext_resource path="res://Assets/buttons/restartBtn.png" type="Texture" id=6]
[ext_resource path="res://Assets/fonts/Angeme-Bold.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 49
use_filter = true
font_data = ExtResource( 7 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = 294.0
margin_top = -154.0
margin_right = 894.0
margin_bottom = 446.0
rect_scale = Vector2( 0.834, 0.677 )
mouse_filter = 2
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )

[node name="exitBtn" type="TouchScreenButton" parent="."]
position = Vector2( 35, 2.00003 )
scale = Vector2( 0.723881, 0.720588 )
z_index = 1
normal = ExtResource( 3 )
pressed = ExtResource( 3 )

[node name="endGame" type="Node2D" parent="."]
visible = false

[node name="background" type="Sprite" parent="endGame"]
modulate = Color( 1, 1, 1, 0.470588 )
position = Vector2( 555, 294 )
texture = ExtResource( 5 )

[node name="restartBtn" type="TouchScreenButton" parent="endGame"]
position = Vector2( 596, 388 )
scale = Vector2( 0.877698, 0.808511 )
normal = ExtResource( 6 )
pressed = ExtResource( 6 )

[node name="Label" type="Label" parent="endGame"]
margin_left = 352.0
margin_top = 158.0
margin_right = 741.0
margin_bottom = 314.0
custom_colors/font_color = Color( 0.670588, 1, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Вы прошли уровень!
Вы заработали: 
       35 Монет!"

[connection signal="pressed" from="exitBtn" to="." method="exitBtn_pressed"]
[connection signal="pressed" from="endGame/restartBtn" to="." method="restartBtn_pressed"]
